<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.5.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>no.nav</groupId>
    <artifactId>veilarbdemo</artifactId>
    <version>1</version>
    <name>veilarbdemo</name>
    <description>Demo backend</description>

    <properties>
        <java.version>11</java.version>
        <common.version>2.2020.04.29_15.01-f57e2ec5a3e8</common.version>
        <springfox.version>2.9.2</springfox.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <finalName>veilarbdemo</finalName>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>3.14.7</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${springfox.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>${springfox.version}</version>
        </dependency>

        <!-- Common Dependencies -->
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>util</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>nais</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>types</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>aktorregister-klient</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>oidc</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>log</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>health</artifactId>
            <version>${common.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
